# Fastapi-e-comerce

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  check_syntax.py  pyproject.toml  test_multipart.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  cart.py  categories.py  orders.py  products.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: cart.py  cart_item.py  category.py  order.py  order_item.py  product.py  user.py
backend/app/schemas/: cart.py  category.py  order.py  product.py  user.py
backend/app/utils/: jwt_handler.py
backend/migrations/: env.py
backend/migrations/versions/: 999ca4ca95ef_initial_migration.py  db8fc1453ca8_it_all_started_here.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  ProductCard.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  CartContext.jsx
frontend/src/pages/: Cart.jsx  Checkout.jsx  Home.jsx  Login.jsx  Orders.jsx  ProductDetail.jsx  Products.jsx  Register.jsx
frontend/src/services/: api.js
