[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "E-commerce API with FastAPI"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Kiran Kumar", email = "skirankumar2015@gmai.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",   # PyJWT is included, but we use python-jose for better integration
    "passlib>=1.7.4",                    # pwdlib is modern but passlib is still fine; we'll use pwdlib separately
    "pwdlib[argon2]>=0.2.0",             # the newest password hashing library
    "bcrypt>=4.2.0",                     # needed for pwdlib
    "python-multipart>=0.0.12",          # needed for OAuth2PasswordRequestForm
    "email-validator>=2.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0", "black", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]